--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
 		我是ss,我改东西了,哈哈哈哈,好烦啊.叽叽叽叽,简直就是一个棒槌
 	</div>
 	<div>
-		我是git ,我添加标签了,你说什么
+		我是git ,我添加标签了,你说什么,git先动的手
 	</div>
 </body>
 </html>
