--- a/test.html
+++ b/test.html
@@ -7,13 +7,7 @@
 <body>
 	<h1>这是标题</h1>
 	<div>
-		我是ss,我改东西了,哈哈哈哈,好烦啊.叽叽叽叽,简直就是一个棒槌
-	</div>
-	<div>
-		我是git ,我添加标签了,你说什么,今天很高兴
-	</div>
-	<div>
-		产品经理
+		aaa白日依山尽
 	</div>
 </body>
 </html>
